# web-frontend/openapi.yml
@@ -172,6 +172,37 @@ paths:
                       $ref: '#/components/schemas/Post'
                   totalCount:
                     type: integer
+  /spotify/search:
+    get:
+      summary: Search Spotify tracks
+      description: Search for tracks on Spotify by a query string.
+      tags:
+        - spotify
+      parameters:
+        - in: query
+          name: q
+          schema:
+            type: string
+          required: true
+          description: The search query string for tracks.
+      responses:
+        '200':
+          description: Successful response with a list of tracks.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  tracks:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Track'
+        '400':
+          description: Bad request, missing search term.
+        '500':
+          description: Internal server error.
   /login:
     post:
       summary: User login
@@ -213,6 +244,8 @@ paths:
                 type: object
                 properties:
                   message:
+                    type: string
+                  accessToken:
                     type: string
         '401':
           description: Unauthorized
@@ -358,14 +391,20 @@ components:
           type: string
     User:
       type: object
+      required:
+        - id
+        - email
+        - name
+        - createdAt
+        - updatedAt
       properties:
         id:
-          type: integer
-          format: uint
+          type: string
+          format: uuid
         email:
           type: string
           format: email
-        username:
+        name:
           type: string
         createdAt:
           type: string
@@ -383,5 +422,20 @@ components:
           type: string
           format: password
       required:
+        - email
+        - password
+    UserRegister:
+      type: object
+      properties:
+        name:
+          type: string
+        email:
+          type: string
+          format: email
+        password:
+          type: string
+          format: password
+      required:
+        - name
         - email
         - password
